--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <ul>
+      <li><<a href="/routes/album"></a></li>
+    </ul>
   </body>
 </html>
